samples/_failures_safe/1761451054_76f96d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_624c49f4.c: In function ‘next_token’:
./samples/SAFE/__tmp_624c49f4.c:167:16: error: expected expression at end of input
  167 |         struct Token token = {TOKEN_EOF, "", lexer->line,
      |                ^~~~~
./samples/SAFE/__tmp_624c49f4.c:167:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_624c49f4.c:167:16: error: expected declaration or statement at end of input
